# vibe

./: .gitignore  Makefile  README.md  env.template  pyproject.toml
src/vibe/: checks.py  project_config.py  settings.py
src/vibe/cli/: serve.py  show_settings.py  utils.py  vibe.py
src/vibe/providers/: __init__.py  claude.py
tests/: test_checks.py  test_main.py  test_project_config.py  test_settings.py
tests/cli/: test_serve.py  test_show_settings.py  test_utils.py  test_vibe.py
tests/providers/: test_claude.py
